# code-challenge-indicium

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  hello.py  meltano.yml  pyproject.toml
.github/workflows/: docker-image-meltano-build.yaml
.meltano/: analytics.json  meltano.db
.meltano/run/: bin
airflow/dags/: docker_pipeline.py  orders_northwind.py  pipeline.py
meltano/: .dockerignore  Dockerfile  meltano-compose-include.yaml  meltano.yml
orchestrate/dags/: pipeline.py
