[project]
name = "code-challange-indicium"
version = "0.1.0"
description = "Code challange for Indicium hiring process. By Fernando Stahelin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.7.1",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 99

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]